--- a/administrator/components/com_projects/models/forms/filter_managerstat.xml
+++ b/administrator/components/com_projects/models/forms/filter_managerstat.xml
@@ -26,6 +26,7 @@
             <option value="">COM_PROJECTS_FILTER_SELECT_DYNAMIC</option>
             <option value="day">COM_PROJECTS_FILTER_SELECT_DYNAMIC_DAY</option>
             <option value="week">COM_PROJECTS_FILTER_SELECT_DYNAMIC_WEEK</option>
+            <option value="month">COM_PROJECTS_FILTER_SELECT_DYNAMIC_MONTH</option>
             <option value="year">COM_PROJECTS_FILTER_SELECT_DYNAMIC_YEAR</option>
         </field>
         <field
