--- a/administrator/components/com_projects/models/forms/setting.xml
+++ b/administrator/components/com_projects/models/forms/setting.xml
@@ -23,6 +23,31 @@
             <option value="0">JALL</option>
         </field>
     </fieldset>
+    <fieldset name="building">
+        <field
+            name="spacer11"
+            type="spacer"
+            label="COM_PROJECTS_USER_SETTINGS_BUILDING_CONTENT"
+        />
+        <field
+                name="building-show_city"
+                type="radio"
+                class="btn-group btn-group-yesno"
+                label="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY"
+                description="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_DESC">
+            <option value="0">JNO</option>
+            <option value="1">JYES</option>
+        </field>
+        <field
+                name="building-show_city_fact"
+                type="radio"
+                class="btn-group btn-group-yesno"
+                label="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_FACT"
+                description="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_FACT_DESC">
+            <option value="0">JNO</option>
+            <option value="1">JYES</option>
+        </field>
+    </fieldset>
     <fieldset name="contracts_v2">
         <field
                 name="spacer_1"
