--- a/administrator/components/com_projects/models/forms/setting.xml
+++ b/administrator/components/com_projects/models/forms/setting.xml
@@ -47,6 +47,24 @@
             <option value="0">JNO</option>
             <option value="1">JYES</option>
         </field>
+        <field
+                name="building-show_addr"
+                type="radio"
+                class="btn-group btn-group-yesno"
+                label="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR"
+                description="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR_FACT">
+            <option value="0">JNO</option>
+            <option value="1">JYES</option>
+        </field>
+        <field
+                name="building-show_addr_fact"
+                type="radio"
+                class="btn-group btn-group-yesno"
+                label="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR_FACT"
+                description="COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR_FACT_DESC">
+            <option value="0">JNO</option>
+            <option value="1">JYES</option>
+        </field>
     </fieldset>
     <fieldset name="contracts_v2">
         <field
