Advanced fields in report by exhibitors

--- a/administrator/components/com_projects/models/forms/filter_reports.xml
+++ b/administrator/components/com_projects/models/forms/filter_reports.xml
@@ -60,7 +60,9 @@
             <option value="director_name">COM_PROJECTS_HEAD_EXP_CONTACT_DIRECTOR_NAME_DESC</option>
             <option value="director_post">COM_PROJECTS_HEAD_EXP_CONTACT_DIRECTOR_POST</option>
             <option value="address_legal">COM_PROJECTS_HEAD_EXP_CONTACT_SPACER_LEGAL</option>
+            <option value="address_fact">COM_PROJECTS_HEAD_EXP_CONTACT_SPACER_FACT</option>
             <option value="contacts">COM_PROJECTS_HEAD_EXP_CONTACT_NAME</option>
+            <option value="phone">COM_PROJECTS_HEAD_EXP_CONTACT_PHONES</option>
             <option value="status">COM_PROJECTS_HEAD_CONTRACT_STATUS_DOG</option>
             <option value="stands">COM_PROJECTS_HEAD_CONTRACT_STAND_SHORT</option>
             <option value="manager">COM_PROJECTS_HEAD_MANAGER</option>
