--- a/administrator/components/com_projects/models/forms/person.xml
+++ b/administrator/components/com_projects/models/forms/person.xml
@@ -59,10 +59,10 @@
         />
         <field
                 name="main"
-                type="list"
+                type="radio"
                 label="COM_PROJECTS_HEAD_PERSON_IS_MAIN"
                 description="COM_PROJECTS_HEAD_PERSON_IS_MAIN_DESC"
-                class="person-field"
+                class="btn-group btn-group-yesno"
                 default="1"
                 >
             <option value="0">JNO</option>
