Without activity in contracts_v2 filter

--- a/administrator/components/com_projects/models/forms/filter_contracts_v2.xml
+++ b/administrator/components/com_projects/models/forms/filter_contracts_v2.xml
@@ -73,6 +73,7 @@
                 onchange="this.form.submit();"
         >
             <option value="">COM_PROJECTS_FILTER_SELECT_ACTIVITY</option>
+            <option value="0">COM_PROJECTS_FILTER_SELECT_ACTIVITY_0</option>
         </field>
         <field
                 name="rubric"
